# g-lab

./: .env.example  .gitignore  CLAUDE.md  G-Lab_User_Manual.md  LICENSE.md  README.md  docker-compose.hub.yml  docker-compose.yml  hotpatch.sh
backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_presets_and_conversations.py  003_add_document_libraries.py  004_add_conversation_id.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: __init__.py  cache.py  credentials_store.py  logging.py  monitoring.py
backend/app/models/: __init__.py  db.py  enums.py  schemas.py
backend/app/routers/: config_presets.py  copilot.py  documents.py  findings.py  graph.py  sessions.py
backend/app/services/: action_log.py  conversation_service.py  finding_service.py  guardrails.py  neo4j_service.py  preset_service.py  session_service.py
backend/app/utils/: __init__.py  crypto.py  cypher.py  exceptions.py  export.py  response.py
backend/tests/api/: conftest.py  test_copilot_endpoints.py  test_document_endpoints.py  test_export_endpoints.py  test_graph_endpoints.py  test_preset_endpoints.py  test_session_endpoints.py
backend/tests/fixtures/: seed_graph.cypher
backend/tests/unit/: conftest.py  test_cache.py  test_chromadb_client.py  test_chunking.py  test_conversation_service.py  test_copilot_router.py  test_credentials_store.py  test_crypto.py  test_cypher_sanitiser.py  test_docling_parser.py  test_document_retrieval.py  test_document_retrieval_role.py  test_embeddings.py  (+21 more)
(+123 files in other folders)
