[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g-lab-backend"
version = "0.1.0"
description = "G-Lab — graph investigation workbench backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "neo4j>=5.25,<7",
    "pydantic-settings>=2.6,<3",
    "alembic>=1.14,<2",
    "structlog>=24.4,<26",
    "python-multipart>=0.0.9,<1",
    "httpx>=0.27,<1",
    "cryptography>=43,<44",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",  # FastAPI Depends() in argument defaults — standard pattern
    "N815",  # camelCase Pydantic fields intentional — frontend type contracts use camelCase
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
